remove root __pycache__ folder

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Database
-DATABASE_NAME = 
-DATABASE_USER = 
-DATABASE_PASSWORD = 
-DATABASE_HOST =
+DATABASE_NAME = "db_asteroids"
+DATABASE_USER = "marvin"
+DATABASE_PASSWORD = "F0rty_Tw0"
+DATABASE_HOST = "localhost"
