--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 # Database
-DATABASE_NAME = ""
-DATABASE_USER = ""
-DATABASE_PASSWORD = ""
-DATABASE_HOST = ""
-DATABASE_PORT = ""
+DATABASE_NAME = "db_asteroids"
+# DATABASE_USER = "marvin"
+DATABASE_USER = "postgres"
+DATABASE_PASSWORD = "F0rty_Tw0"
+DATABASE_HOST = "localhost"
+# DATABASE_PORT = "5432"
+DATABASE_PORT = "9090"
