--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # Database
 DATABASE_NAME = "db_asteroids"
-# DATABASE_USER = "marvin"
-DATABASE_USER = "postgres"
-DATABASE_PASSWORD = "F0rty_Tw0"
-DATABASE_HOST = "localhost"
-# DATABASE_PORT = "5432"
-DATABASE_PORT = "9090"
+# POSTGRES_USER = "marvin"
+POSTGRES_USER = "postgres"
+POSTGRES_PASSWORD = "F0rty_Tw0"
+POSTGRES_HOST = "localhost"
+# POSTGRES_PORT = "5432"
+POSTGRES_PORT = "9090"
