--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,2 +1,5 @@
-FROM postgres:14.0
-EXPOSE 5432
+# FROM postgres:14.0
+# EXPOSE 5432
+
+FROM alpine:latest
+CMD ["sh", "-c", "while :; do sleep 10; done"]
