--- a/.env
+++ b/.env
@@ -1,8 +1,6 @@
 # Database
-DATABASE_NAME = "db_asteroids"
-# POSTGRES_USER = "marvin"
-POSTGRES_USER = "postgres"
-POSTGRES_PASSWORD = "F0rty_Tw0"
-POSTGRES_HOST = "localhost"
-# POSTGRES_PORT = "5432"
-POSTGRES_PORT = "9090"
+DATABASE_NAME = ""
+POSTGRES_USER = ""
+POSTGRES_PASSWORD = ""
+POSTGRES_HOST = ""
+POSTGRES_PORT = ""
