rewrite postgres, now is only on docker-compose.yml

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
-# Database
-DATABASE_NAME = ""
-POSTGRES_USER = ""
-POSTGRES_PASSWORD = ""
-POSTGRES_HOST = ""
-POSTGRES_PORT = ""
+# Database #####################################################################
+POSTGRES_DB = "db_asteroids"
+
+POSTGRES_USER = "marvin"
+POSTGRES_PASSWORD = "the_R0BOT"
+
+POSTGRES_HOST = "localhost"
+POSTGRES_PORT = "5432"
