--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # Database #####################################################################
-POSTGRES_DB = ""
+POSTGRES_DB = "db_asteroids"
 
-POSTGRES_USER = ""
-POSTGRES_PASSWORD = ""
+POSTGRES_USER = "marvin"
+POSTGRES_PASSWORD = "the_R0BOT"
 
-POSTGRES_HOST = ""
-POSTGRES_PORT = ""
+POSTGRES_HOST = "localhost"
+POSTGRES_PORT = "5432"
