--- a/postgres/docker-compose.yml
+++ b/postgres/docker-compose.yml
@@ -2,6 +2,8 @@ services:
   postgres:
     image: postgres:latest
     restart: always
+    # env_file:
+    #   - ./../.env
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
